--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,6 +10,7 @@
 		<title>Andreas Lindegaard</title>
 	</head>
 	<body>
-		<h1>Min blog</h1>
+		<h1>Om mig</h1>
+    <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework</p>
 	</body>
 </html>
