--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,6 +11,6 @@
 	</head>
 	<body>
 		<h1>Om mig</h1>
-    <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework</p>
+    <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework.</p>
 	</body>
 </html>
