--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,6 +10,10 @@
 		<title>Andreas Lindegaard</title>
 	</head>
 	<body>
+
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+
 		<h1>Min blog</h1>
 	</body>
 </html>
