--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,6 +10,10 @@
 		<title>Andreas Lindegaard</title>
 	</head>
 	<body>
+  
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+
 		<h1>Om mig</h1>
     <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework.</p>
 	</body>
