2 files modified, 1 added

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -10,12 +10,11 @@
 		<title>Andreas Lindegaard</title>
 	</head>
 	<body>
-  
-  <a href="/">Home</a>
-  <a href="/about/">About</a>
-  <a href="/blog/">Blog</a>
 
-		<h1>Om mig</h1>
-    <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework.</p>
+		<a href="/">Home</a>
+		<a href="/about/">About</a>
+    <a href="/blog/">Blog</a>
+
+		<h1>Blog opslag</h1>
 	</body>
 </html>
