--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,8 @@
 
 		<a href="/">Home</a>
 		<a href="/about/">About</a>
-
+    <a href="/blog/">Blog</a>
+		
 		<h1>Min blog</h1>
 	</body>
 </html>
