--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,5 +16,6 @@
     <a href="/blog/">Blog</a>
 
 		<h1>Blog opslag</h1>
+			<p>Her vil jeg blogge om mine fremskridt i at få bygget denne blog.</p>
 	</body>
 </html>
