--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -17,5 +17,11 @@
 
 		<h1>Blog opslag</h1>
 			<p>Her vil jeg blogge om mine fremskridt i at få bygget denne blog.</p>
+		
+			<ul>
+      	<li><a href="/posts/post-1/">Post 1</a></li>
+    	</ul>
+
+			
 	</body>
 </html>
