--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+const pageTitle = "About Me";
 ---
 
 <html lang="en">
@@ -7,7 +8,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Andreas Lindegaard</title>
+		<title>{pageTitle}</title>
 	</head>
 	<body>
   
@@ -15,7 +16,7 @@
   <a href="/about/">About</a>
   <a href="/blog/">Blog</a>
 
-		<h1>Om mig</h1>
+		<h1>{pageTitle}</h1>
     <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework.</p>
 	</body>
 </html>
