--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,5 +1,14 @@
 ---
 const pageTitle = "Om mig";
+
+const identity = {
+  firstName: "Andreas",
+  country: "Danmark",
+  occupation: "Lærer",
+  hobbies: ["Udvikling", "Investering", "Sundhed"],
+};
+
+const skills = ["HTML", "CSS", "JavaScript", "Astro", "Python"];
 ---
 
 <html lang="en">
@@ -18,5 +27,19 @@ const pageTitle = "Om mig";
 
 		<h1>{pageTitle}</h1>
     <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework.</p>
+
+		<p>Here are a few facts about me:</p>
+<ul>
+  <li>My name is {identity.firstName}.</li>
+  <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+  {identity.hobbies.length >= 2 && 
+    <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
+  } 
+</ul>
+<p>My skills are:</p>
+<ul>
+  {skills.map((skill) => <li>{skill}</li>)}
+</ul>
+
 	</body>
 </html>
