--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -14,7 +14,9 @@ const happy = true;
 const finished = false;
 const goal = 3;
 
-const skillColor = "navy";
+const skillColor = "green";
+const fontWeight = "bold";
+const textCase = "lowercase";
 ---
 
 <html lang="en">
@@ -24,16 +26,16 @@ const skillColor = "navy";
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
-		  <style define:vars={{skillColor}}>
-      h1 {
+		<style define:vars={{skillColor, fontWeight, textCase}}>
+    	h1 {
         color: purple;
         font-size: 4rem;
       }
 
  			.skill {
-   				color: var(--skillColor);
-   				font-weight: bold;
- 			}
+   			color: var(--skillColor);
+    		font-weight: var(--fontWeight);
+    		text-transform: var(--textCase); 			}
 
     </style>
 	</head>
