--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,5 +19,7 @@ const pageTitle = "Andreas Lindegaard";
     <a href="/blog/">Blog</a>
 		
 		<h1>{pageTitle}</h1>
+		<p>Dette er min blog</p>
+
 	</body>
 </html>
