--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import '../styles/global.css';
+import Navigation from '../components/Navigation.astro';
 
 const pageTitle = "Blog";
 ---
@@ -14,9 +15,7 @@ const pageTitle = "Blog";
 	</head>
 	<body>
 
-		<a href="/">Home</a>
-		<a href="/about/">About</a>
-    <a href="/blog/">Blog</a>
+	<Navigation />
 
 		<h1>{pageTitle}</h1>
 			<p>Her vil jeg blogge om mine fremskridt i at få bygget denne blog.</p>
