--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "Blog";
 ---
@@ -26,6 +27,6 @@ const pageTitle = "Blog";
      		<li><a href="/posts/post-3/">Post 3</a></li>
     	</ul>
 
-			
+			   <Footer />
 	</body>
 </html>
