--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import '../styles/global.css';
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 
 const pageTitle = "Andreas Lindegaard";
 ---
@@ -19,6 +20,7 @@ const pageTitle = "Andreas Lindegaard";
 		
 		<h1>{pageTitle}</h1>
 		<p>Dette er min blog</p>
-
+		
+   <Footer />
 	</body>
 </html>
