--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,5 +4,6 @@ const username = "withastro";
 ---
 
 <footer>
-  <p>Learn more about my projects on <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+  <p>Lær mere om mine projekter på <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+  <p>Skriv til mig: andreas993@gmail.com</p>
 </footer>
