--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,9 +1,10 @@
 ---
-const platform = "github";
-const username = "withastro";
+import Social from './Social.astro';
 ---
 
 <footer>
-  <p>Lær mere om mine projekter på <a href={`https://www.${platform}.com/${username}`}>{platform}</a>!</p>
+  <Social platform="twitter" username="astrodotbuild" />
+  <Social platform="github" username="withastro" />
+  <Social platform="youtube" username="astrodotbuild" />
   <p>Skriv til mig: andreas993@gmail.com</p>
 </footer>
