--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,6 +2,15 @@
 import Social from './Social.astro';
 ---
 
+<style>
+  footer {
+    /*det er display: flex som gør knapperne underlige, hvis ikke det bliver bedre senere i tutorialen så slet display flex eller ændre den */
+    display: flex;
+    gap: 1rem;
+    margin-top: 2rem;
+  }
+</style>
+
 <footer>
   <Social platform="twitter" username="astrodotbuild" />
   <Social platform="github" username="withastro" />
