3 files modified, 1 added

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Blog";
@@ -16,7 +16,7 @@ const pageTitle = "Blog";
 	</head>
 	<body>
 
-	<Navigation />
+	 <Header />
 
 		<h1>{pageTitle}</h1>
 			<p>Her vil jeg blogge om mine fremskridt i at få bygget denne blog.</p>
