--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Om mig";
@@ -45,7 +45,7 @@ const textCase = "lowercase";
 	</head>
 	<body>
   
- <Navigation />
+ <Header />
 
 		<h1>{pageTitle}</h1>
     <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework.</p>
