--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
 const pageTitle = "Andreas Lindegaard";
@@ -16,11 +16,11 @@ const pageTitle = "Andreas Lindegaard";
 	</head>
 	<body>
 
-	<Navigation />
+	 <Header />
 		
 		<h1>{pageTitle}</h1>
 		<p>Dette er min blog</p>
-		
+
    <Footer />
 	</body>
 </html>
