--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -28,5 +28,8 @@ const pageTitle = "Blog";
     	</ul>
 
 			   <Footer />
+		<script>
+  		 import "../scripts/menu.js";
+	 </script>
 	</body>
 </html>
