--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,5 @@
 ---
-import '../styles/global.css';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const pageTitle = "Om mig";
 
@@ -23,14 +21,9 @@ const fontWeight = "bold";
 const textCase = "lowercase";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{pageTitle}</title>
-		<style define:vars={{skillColor, fontWeight, textCase}}>
+<BaseLayout pageTitle={pageTitle}>
+
+	<style define:vars={{skillColor, fontWeight, textCase}}>
     	h1 {
         color: purple;
         font-size: 4rem;
@@ -40,24 +33,18 @@ const textCase = "lowercase";
    			color: var(--skillColor);
     		font-weight: var(--fontWeight);
     		text-transform: var(--textCase); 			}
+	</style>
 
-    </style>
-	</head>
-	<body>
-  
- <Header />
-
-		<h1>{pageTitle}</h1>
     <p>Dette er min blog som jeg bygger i stackblitz med netlify i et astro framework.</p>
 
 		<p>Her er nogle fakta om mig:</p>
-<ul>
-  <li>My name is {identity.firstName}.</li>
-  <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
-  {identity.hobbies.length >= 2 && 
+	<ul>
+  	<li>My name is {identity.firstName}.</li>
+  	<li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+ 		{identity.hobbies.length >= 2 && 
     <li>Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}</li>
   } 
-</ul>
+	</ul>
 <p>My skills are:</p>
 <ul>
   {skills.map((skill) => <li class="skill">{skill}</li>)}
@@ -69,9 +56,4 @@ const textCase = "lowercase";
 
 {goal === 3 ? <p>My goal is to finish in 3 days.</p> : <p>My goal is not 3 days.</p>}
 
-   <Footer />
-	<script>
-   import "../scripts/menu.js";
- </script>
-	</body>
-</html>
+</BaseLayout>
