--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from '../layouts/BaseLayout.astro';
+const allPosts = await Astro.glob('../pages/posts/*.md');
 const pageTitle = "Blog";
 ---
 
@@ -8,9 +9,7 @@ const pageTitle = "Blog";
 			<p>Her vil jeg blogge om mine fremskridt i at få bygget denne blog.</p>
 		
 			<ul>
-      	<li><a href="/posts/post-1/">Post 1</a></li>
-				<li><a href="/posts/post-2/">Post 2</a></li>
-     		<li><a href="/posts/post-3/">Post 3</a></li>
+				{allPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
     	</ul>
 
 </BaseLayout>
