--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -20,6 +20,6 @@ const filteredPosts = posts.filter((post) => post.frontmatter.tags.includes(tag)
 <BaseLayout pageTitle={tag}>
   <p>Posts tagged with {tag}</p>
    <ul>
-    {filteredPosts.map((post) => <BlogPost url={post.url} title={post.frontmatter.title}/>)}
+ {filteredPosts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
   </ul>
 </BaseLayout>
